
plugins {
	id 'org.springframework.boot' version '2.2.4.RELEASE'
	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
	id 'java'
	id "org.beryx.jlink" version "2.17.2"
	id "org.javamodularity.moduleplugin" version "1.6.0"
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11

mainClassName = 'com.example.testjlink.TestJlinkApplication'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

jar {
	enabled = true
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
}

/*
jlink {
	addExtraDependencies("com.fasterxml.jackson")
	options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
	launcher {
		name = 'hellofx'
		customImage {
			appModules = ['com.example.merged.module']
		}
		jvmArgs = [
				'--add-reads', 'com.example.merged.module=com.example',
				'-cp', '../app/*'
		]
	}
	forceMerge "controlsfx", "bcprov", "jaxb", "javax", "istack", "stax", "log4j", "spring", "com.fasterxml.jackson"
}*/
